add-item-requests-and-gateway: coverage increase. refactoring BookingServiceTest